cargo-features = ["trim-paths"]

[package]
name = "dynamic"
version = "6.8.0-release"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
windows = { version = "0.51.1", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_System_Diagnostics_ToolHelp", "System", "Win32_System_LibraryLoader", "Win32_System_Console", "Win32_UI_Input_KeyboardAndMouse", "Win32_Graphics_Gdi"] }
retour = { git = "https://github.com/Hpmason/retour-rs.git", features = ["static-detour"] }
flate2 = { version = "1.0.35", features = ["zlib"], default-features = false }
zstring = { path = "/home/stackalloc/Git/zstring" }
wmem = { path = "/home/stackalloc/Git/wmem" }
sbyt = { path = "/home/stackalloc/Git/sbyt" }
crossbeam-channel = "0.5.14"
atomic_refcell = "0.1.13"
clipboard-win = "5.4.0"
serde_jsonc = "1.0.108"
parking_lot = "0.12.2"
dll-syringe = "0.15.2"
magic-crypt = "3.1.13"
atomic_float = "1.1.0"
message-io = { path = "/home/stackalloc/Git/message-io" }
indexmap = "2.7.0"
hudhook = { path = "/home/stackalloc/Git/hudhook"}
dashmap = "6.1.0"
obfstr = "0.4.4"
ahash = "0.8.11"
image = "0.24.9"
libc = "0.2.169"
rkyv = "0.7.45"
rune = "0.13.4"
gif = "0.13.1"

[profile.release]
overflow-checks = true
incremental = true
trim-paths = "all"
codegen-units = 1
panic = "abort"
opt-level = "z"
strip = true
lto = "fat"
